<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.labsoftware.personabasedatos.Registrar">

    <TextView
        android:text="@string/titulo_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="24sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_weight="1">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtcedula"
                android:layout_weight="1"
                android:hint="@string/cedula" />

            <Button
                android:text="@string/buscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:layout_weight="1" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtnombre"
            android:layout_weight="1"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtapellido"
            android:layout_weight="1"
            android:hint="@string/apellido" />

        <TextView
            android:text="@string/sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:textStyle="normal|bold"
            android:textAllCaps="false" />

        <RadioButton
            android:text="@string/masculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdbMasculino"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/femenino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdbFemenino"
            android:layout_weight="1" />

        <TextView
            android:text="@string/pasatiempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:textStyle="normal|bold" />

        <CheckBox
            android:text="@string/programar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chbprogramar"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/leer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chbleer"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/bailar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chbBailar"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:text="@string/guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnguardar"
                android:layout_weight="1"
                android:onClick="guardar" />

            <Button
                android:text="@string/modificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnmodificar"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:text="@string/eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btneliminar"
                android:layout_weight="1" />

            <Button
                android:text="@string/limpiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnlimpiar"
                android:layout_weight="1"
                android:onClick="limpiar" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
