<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_listado_tabla"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.labsoftware.personabasedatos.ListadoTabla">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:stretchColumns="*"
                android:id="@+id/tblpersonas">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtnum"
                        android:textAlignment="center"
                        android:textStyle="normal|bold"
                        android:textSize="18sp" />

                    <TextView
                        android:text="@string/cedula"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView9"
                        android:textAlignment="center"
                        android:textStyle="normal|bold"
                        android:textSize="18sp" />

                    <TextView
                        android:text="@string/nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:textAlignment="center"
                        android:textStyle="normal|bold"
                        android:textSize="18sp" />

                    <TextView
                        android:text="@string/sexo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6"
                        android:textAlignment="center"
                        android:textStyle="normal|bold"
                        android:textSize="18sp" />

                    <TextView
                        android:text="@string/pasatiempo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:textAlignment="center"
                        android:textStyle="normal|bold"
                        android:textSize="18sp" />
                </TableRow>

            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

</RelativeLayout>
